--- a/src/components/GifGrid/GifGrid.css
+++ b/src/components/GifGrid/GifGrid.css
@@ -1,13 +1,23 @@
-.GifGridItem {
-  border: 1px solid grey;
-  border-radius: 5px;
-  width: 20%;
-  margin-bottom: 1rem;
-  text-align: center;
-  
+.GifGrid {
+  display: flex;
+  flex-flow: wrap;
+  width: 90vw;
+  justify-content: space-evenly;
+  align-content: space-around;
+  height: fit-content;
+  animation: fadeOut;
+  animation-duration: 1s;
+
 }
 
-.GifGridItem img {
-  width: 100%;
-  height: 80%;
+.GifGrid p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
+h3:hover {
+  animation: flip;
+  animation-duration: 2s;
+}
+
